--- a/JavaApplication1/src/quanlyhocvien/view/ChonHocVienJpanel.form
+++ b/JavaApplication1/src/quanlyhocvien/view/ChonHocVienJpanel.form
@@ -41,8 +41,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="108" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" pref="122" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jtf_search" min="-2" pref="256" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="226" max="32767" attributes="0"/>
               </Group>
@@ -67,7 +67,7 @@
         <Component class="javax.swing.JTextField" name="jtf_search">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Yrsa" size="18" style="0"/>
+              <Font name="Yrsa" size="22" style="0"/>
             </Property>
           </Properties>
         </Component>
@@ -81,13 +81,16 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="235" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="231" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
         </Container>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Liberation Sans" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="T&#xec;m theo t&#xea;n:"/>
           </Properties>
         </Component>
