--- a/JavaApplication1/src/quanlyhocvien/view/LopHocInfoJFrame.form
+++ b/JavaApplication1/src/quanlyhocvien/view/LopHocInfoJFrame.form
@@ -79,12 +79,12 @@
               <Color blue="50" green="af" red="4c" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="1"/>
+              <Font name="Liberation Sans" size="22" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="+L&#x1b0;u"/>
+            <Property name="text" type="java.lang.String" value="L&#x1b0;u"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
@@ -100,8 +100,8 @@
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="Th&#xf4;ng tin h&#x1ecd;c vi&#xea;n">
-                  <Font PropertyName="font" name="Liberation Sans" size="17" style="1"/>
+                <TitledBorder title="Th&#xf4;ng tin l&#x1edb;p h&#x1ecd;c">
+                  <Font PropertyName="font" name="Liberation Sans" size="22" style="1"/>
                 </TitledBorder>
               </Border>
             </Property>
@@ -174,7 +174,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Liberation Sans" size="20" style="0"/>
+                  <Font name="Liberation Sans" size="18" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Kh&#xf3;a h&#x1ecd;c:"/>
               </Properties>
@@ -182,7 +182,7 @@
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Liberation Sans" size="20" style="0"/>
+                  <Font name="Liberation Sans" size="18" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="L&#x1ecb;ch h&#x1ecd;c:"/>
               </Properties>
@@ -195,7 +195,7 @@
             <Component class="javax.swing.JLabel" name="jLabel8">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Liberation Sans" size="20" style="0"/>
+                  <Font name="Liberation Sans" size="18" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Tr&#x1ea1;ng th&#xe1;i:"/>
               </Properties>
@@ -210,7 +210,7 @@
                 <Component class="javax.swing.JList" name="jlist_khoahoc">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Liberation Sans" size="18" style="0"/>
+                      <Font name="Liberation Sans" size="16" style="0"/>
                     </Property>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="0"/>
@@ -232,7 +232,7 @@
                 <Component class="javax.swing.JList" name="jlist_lichoc">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Liberation Sans" size="18" style="0"/>
+                      <Font name="Liberation Sans" size="16" style="0"/>
                     </Property>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="0"/>
@@ -249,7 +249,7 @@
         <Component class="javax.swing.JLabel" name="jlb_msg">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="1"/>
+              <Font name="Liberation Sans" size="22" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="ff" type="rgb"/>
