--- a/JavaApplication1/src/quanlyhocvien/view/ThongTinCuTheLopJFrame.form
+++ b/JavaApplication1/src/quanlyhocvien/view/ThongTinCuTheLopJFrame.form
@@ -51,23 +51,23 @@
                           <Component id="jLabelGiaTriTenLop" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabelSiSo" min="-2" pref="108" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="jLabelSiSo" min="-2" pref="114" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jLabelGiaTriSiSo" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabelLichHoc" min="-2" pref="108" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="jLabelLichHoc" min="-2" pref="120" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabelGiaTriLichHoc" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <Group type="102" attributes="0">
-                  <Component id="jLabelSearch" min="-2" pref="108" max="-2" attributes="0"/>
+                  <Component id="jLabelSearch" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jtf_search" min="-2" pref="241" max="-2" attributes="0"/>
-                  <EmptySpace pref="369" max="32767" attributes="0"/>
+                  <EmptySpace pref="345" max="32767" attributes="0"/>
                   <Component id="btn_print" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Component id="btn_add" min="-2" max="-2" attributes="0"/>
@@ -112,7 +112,7 @@
         <Component class="javax.swing.JLabel" name="jLabelSearch">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="T&#xec;m theo t&#xea;n:"/>
           </Properties>
@@ -130,7 +130,7 @@
         <Component class="javax.swing.JLabel" name="jLabelTenLop">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="L&#x1edb;p :"/>
           </Properties>
@@ -138,7 +138,7 @@
         <Component class="javax.swing.JLabel" name="jLabelGiaTriTenLop">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel2"/>
           </Properties>
@@ -146,7 +146,7 @@
         <Component class="javax.swing.JLabel" name="jLabelSiSo">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="S&#x1ed1; h&#x1ecd;c vi&#xea;n :"/>
           </Properties>
@@ -154,7 +154,7 @@
         <Component class="javax.swing.JLabel" name="jLabelGiaTriSiSo">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel2"/>
           </Properties>
@@ -162,7 +162,7 @@
         <Component class="javax.swing.JLabel" name="jLabelLichHoc">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="L&#x1ecb;ch h&#x1ecd;c :"/>
           </Properties>
@@ -170,7 +170,7 @@
         <Component class="javax.swing.JLabel" name="jLabelGiaTriLichHoc">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="20" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel2"/>
           </Properties>
@@ -181,12 +181,12 @@
               <Color blue="50" green="af" red="4c" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="22" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="+Th&#xea;m h&#x1ecd;c vi&#xea;n"/>
+            <Property name="text" type="java.lang.String" value="Th&#xea;m h&#x1ecd;c vi&#xea;n"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_addActionPerformed"/>
@@ -213,13 +213,13 @@
               <Color blue="50" green="af" red="4c" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Liberation Sans" size="18" style="0"/>
+              <Font name="Liberation Sans" size="22" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Xu&#x1ea5;t file"/>
             <Property name="actionCommand" type="java.lang.String" value="+Xu&#x1ea5;t file"/>
-            <Property name="label" type="java.lang.String" value="+Xu&#x1ea5;t file"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_printActionPerformed"/>
